<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ps4_franka_servo</name>
  <version>1.0.0</version>
  <description>PS4 controller interface for Franka Panda robot arm using MoveIt Servo for real-time control</description>
  <maintainer email="diana@example.com">Diana</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>joy</depend>
  <depend>franka_msgs</depend>  <!-- ADDED for gripper control -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
